# ClearLine

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE.md  README.md
.github/workflows/: windows-installer.yml
clearline-app/: Cargo.toml  build.rs
clearline-app/src/: main.rs  settings.rs  tray.rs  update.rs  windows_settings.rs
clearline-core/: Cargo.toml
clearline-core/examples/: analyze_aec_challenge_fixture.rs  analyze_synthetic_aec.rs  diagnose_virtual_mic_loopback.rs  inject_vb_cable_sine.rs  inject_virtual_mic_silence.rs  inject_virtual_mic_sine.rs  list_devices.rs  probe_loopback_reference.rs  probe_pipeline_aec.rs  probe_realtime_aec.rs  probe_virtual_mic.rs
clearline-core/src/: device.rs  echo.rs  frame.rs  lib.rs  pipeline.rs  preprocess.rs  reference.rs  resample.rs  suppressor.rs  virtual_mic.rs
clearline-core/tests/: aec_challenge_fixture.rs
clearline-driver/: wdk-desktop.vsconfig
clearline-driver/ClearLineVirtualAudio/: ClearLineVirtualAudio.inf  ClearLineVirtualAudio.vcxproj
clearline-driver/scripts/: allow-appcontrol-driver-policy.ps1  build-driver.ps1  check-device.ps1  check-driver-env.ps1  check-vs-driverkit.ps1  cleanup-audio-drivers.ps1  enable-testsigning.ps1  install-driver.ps1  install-wdk-components.ps1  prepare-test-machine.ps1  sign-driver.ps1  uninstall-driver.ps1  verify-build-ready.ps1  verify-driver-package.ps1
clearline-installer/: ClearLine.nsi  README.md
clearline-installer-helper/: Cargo.toml
clearline-installer-helper/src/: main.rs
clearline-installer/scripts/: build-installer.ps1  verify-installed-clearline.ps1  verify-installer-artifact.ps1  verify-uninstalled-clearline.ps1
clearline-lab/: Cargo.toml
clearline-lab/src/: main.rs  recorder.rs
clearline-setup/: Cargo.toml  ClearLineSetup.exe.manifest  build.rs
clearline-setup/src/: main.rs
docs/: driver.md  mvp.md  windows-signing.md
docs/superpowers/plans/: 2026-07-06-clearline-capture-ring-buffer-output.md  2026-07-06-clearline-control-ioctl.md  2026-07-06-clearline-mvp-skeleton.md  2026-07-06-clearline-pcm-injection-control.md  2026-07-06-clearline-virtual-mic-pipeline-output.md  2026-07-06-deepfilternet-background-inference.md  2026-07-06-default-recording-device-preflight.md  2026-07-06-high-quality-rnnoise-fallback.md  2026-07-06-startup-runtime-ux-polish.md  2026-07-06-user-settings-persistence.md  2026-07-06-virtual-audio-driver.md  2026-07-07-aec-integration.md  2026-07-07-deepfilternet-aec-default.md  2026-07-07-gui-installer.md  2026-07-07-vb-cable-installer-backend.md  2026-07-08-multi-sample-rate-input.md  2026-07-09-microphone-enhancement.md  2026-07-09-single-device-audio-recorder.md
docs/superpowers/specs/: 2026-07-06-clearline-capture-ring-buffer-design.md  2026-07-06-clearline-mvp-skeleton-design.md  2026-07-06-deepfilternet-background-inference-design.md  2026-07-06-default-recording-device-preflight-design.md  2026-07-06-high-quality-rnnoise-fallback-design.md  2026-07-06-startup-runtime-ux-design.md  2026-07-06-user-settings-design.md  2026-07-08-multi-sample-rate-input-design.md  2026-07-09-microphone-enhancement-design.md
scripts/: check-authenticode.ps1  download-aec-fixtures.py
tests/: test-driver-layout.ps1  test-installer-layout.ps1
