[workspace]
members = ["clearline-core", "clearline-app", "clearline-installer-helper", "clearline-setup", "clearline-lab"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/denghaoxuan991876906/ClearLine"

[workspace.dependencies]
anyhow = "1.0.103"
cpal = "0.18.1"
aec3 = "0.3.1"
hound = "3.5.1"
directories = "6.0.0"
eframe = { version = "0.35.0", default-features = false }
flate2 = "1.1.5"
ndarray = "=0.15.6"
nnnoiseless = { version = "0.5.2", default-features = false }
rubato = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
thiserror = "2.0.18"
windows-sys = "0.61.2"
windows = "0.62.2"
windows-core = "0.62.2"
