[package]
name = "clearline-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
aec = ["dep:aec3"]
rnnoise = ["dep:nnnoiseless"]
deepfilternet = [
    "dep:df",
    "dep:flate2",
    "dep:ndarray",
    "dep:tar",
]

[dependencies]
aec3 = { workspace = true, optional = true }
df = { package = "deep_filter", git = "https://github.com/Rikorose/DeepFilterNet", rev = "978576aa8400552a4ce9730838c635aa30db5e61", default-features = false, features = ["tract"], optional = true }
flate2 = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
nnnoiseless = { workspace = true, optional = true }
rubato.workspace = true
tar = { workspace = true, optional = true }
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
cpal.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[dev-dependencies]
hound.workspace = true
