[package]
name = "clearline-installer-helper"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
cpal.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
windows-core.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
] }
